--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>SOMProposal</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -24,8 +24,72 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h1>AR支持的智能研讨间——开会吧</h1>
+				</section>
+				<section>
+					<h1>AR支持的智能研讨间——开会吧</h1>
+					<h2>针对群体</h2>
+					<p>学生（主要针对研究生）、老师</p>
+				</section>
+				<section>
+					<h1>AR支持的智能研讨间——开会吧</h1>
+					<h2>用户痛点</h2>
+					<ul>
+						<li>老师与研究生或者他人经常需要远程开会，而视频会议由于屏幕大小的限制会有一定局限性。</li>
+						<li>使用普通屏幕进行开会相对于面对面开会缺乏真实感且降低效率。</li>
+					</ul>
+				</section>
+				<section>
+					<h1>AR支持的智能研讨间——开会吧</h1>
+					<h2>场景设计</h2>
+					<p>会议室+AR投影+3D实时摄像</p>
+				</section>
+				<section>
+					<h1>AR支持的智能研讨间——开会吧</h1>
+					<h2>功能设计</h2>
+					<ul>
+						<li>AR和3D实时摄像技术支持：通过AR和3D摄像技术增强视频会议的真实感，并实现远程文档共享批注，提高效率。</li>
+						<li>多种交互方式：没有3D摄像设备的环境，也可以直接通过视频进行交流</li>
+						<li>实时查询：用户可通过微信小程序了解研讨间的可用情况，避免因没有空房间而白跑一趟。</li>
+						<li>讨论引导：通过智能关联系统来搜索与主题相关的话题和方向，在讨论遇到瓶颈时给出提示</li>
+					</ul>
+				</section>
+				<section>
+					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+				</section>
+				<section>
+					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+					<h2>针对群体</h2>
+					<p>学生、老师</p>
+				</section>
+				<section>
+					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+					<h2>用户痛点</h2>
+					<ul>
+						<li>老师、研究生一天工作8小时非常劳累</li>
+						<li>中午时间宝贵，寝室、住宅很远</li>
+						<li>中午不休息易降低工作效率</li><li>趴在桌子上休息很难受，并且有损健康</li>
+						<li>办公椅也谈不上舒服</li>
+						<li>熬夜的同学也许需要休息一会儿恢复精力（清华某业工程系小学期、某业工程系大作业）</li>
+					</ul>
+				</section>
+				<section>
+					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+					<h2>场景设计</h2>
+					<p>可变式多功能床+智能镜子+智能睡眠监测与控制系统+基础设施（被子、枕头、一次性梳子）</p>
+
+				</section>
+				<section>
+					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+					<h2>功能设计</h2>
+					<ul>
+						<li>提供极其舒适的睡眠环境，可变式多功能床可以切换成平躺式、半躺式、按摩椅等等</li>
+						<li>为女生提供睡醒后整理仪容的设备</li>
+						<li>监测睡眠质量</li>
+						<li>智能唤醒</li>
+					</ul>
+				</section>
 			</div>
 		</div>
 
