--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>SOMProposal</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/styeah.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,7 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
+				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>AR支持的智能研讨间——开会吧</h1>
 				</section>
 				<section>
@@ -36,8 +36,8 @@
 					<h1>AR支持的智能研讨间——开会吧</h1>
 					<h2>用户痛点</h2>
 					<ul>
-						<li>老师与研究生或者他人经常需要远程开会，而视频会议由于屏幕大小的限制会有一定局限性。</li>
-						<li>使用普通屏幕进行开会相对于面对面开会缺乏真实感且降低效率。</li>
+						<li class="fragment">老师与研究生或者他人经常需要远程开会，而视频会议由于屏幕大小的限制会有一定局限性。</li>
+						<li class="fragment">使用普通屏幕进行开会相对于面对面开会缺乏真实感且降低效率。</li>
 					</ul>
 				</section>
 				<section>
@@ -46,16 +46,26 @@
 					<p>会议室+AR投影+3D实时摄像</p>
 				</section>
 				<section>
-					<h1>AR支持的智能研讨间——开会吧</h1>
-					<h2>功能设计</h2>
-					<ul>
-						<li>AR和3D实时摄像技术支持：通过AR和3D摄像技术增强视频会议的真实感，并实现远程文档共享批注，提高效率。</li>
-						<li>多种交互方式：没有3D摄像设备的环境，也可以直接通过视频进行交流</li>
-						<li>实时查询：用户可通过微信小程序了解研讨间的可用情况，避免因没有空房间而白跑一趟。</li>
-						<li>讨论引导：通过智能关联系统来搜索与主题相关的话题和方向，在讨论遇到瓶颈时给出提示</li>
-					</ul>
+					<section>
+						<h1>AR支持的智能研讨间——开会吧</h1>
+						<h2>功能设计</h2>
+						<ul>
+							<li class="fragment">AR和3D实时摄像技术支持：通过AR和3D摄像技术增强视频会议的真实感，并实现远程文档共享批注，提高效率。</li>
+							<li class="fragment">多种交互方式：没有3D摄像设备的环境，也可以直接通过视频进行交流</li>
+							<li class="fragment">实时查询：用户可通过微信小程序了解研讨间的可用情况，避免因没有空房间而白跑一趟。</li>
+							<li class="fragment">讨论引导：通过智能关联系统来搜索与主题相关的话题和方向，在讨论遇到瓶颈时给出提示</li>
+						</ul>
+					</section>
+					<section>
+						<h2>你觉得这个需求有多大</h2>
+						<h3 class="fragment">用过我们产品的人一定不会想着再用Skype了</h3>
+					</section>
+					<section>
+						<h2>AR眼镜很笨重</h2>
+						<h3 class="fragment">不久的将来一定会有人们可长期使用的AR眼镜</h3>
+					</section>
 				</section>
-				<section>
+				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
 				</section>
 				<section>
@@ -67,11 +77,12 @@
 					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
 					<h2>用户痛点</h2>
 					<ul>
-						<li>老师、研究生一天工作8小时非常劳累</li>
-						<li>中午时间宝贵，寝室、住宅很远</li>
-						<li>中午不休息易降低工作效率</li><li>趴在桌子上休息很难受，并且有损健康</li>
-						<li>办公椅也谈不上舒服</li>
-						<li>熬夜的同学也许需要休息一会儿恢复精力（清华某业工程系小学期、某业工程系大作业）</li>
+						<li class="fragment">老师、研究生一天工作8小时非常劳累</li>
+						<li class="fragment">中午时间宝贵，寝室、住宅很远</li>
+						<li class="fragment">中午不休息易降低工作效率</li>
+						<li class="fragment">趴在桌子上休息很难受，并且有损健康</li>
+						<li class="fragment">办公椅也谈不上舒服</li>
+						<li class="fragment">熬夜的同学也许需要休息一会儿恢复精力（清华某业工程系小学期、某业工程系大作业）</li>
 					</ul>
 				</section>
 				<section>
@@ -81,14 +92,29 @@
 
 				</section>
 				<section>
-					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
-					<h2>功能设计</h2>
-					<ul>
-						<li>提供极其舒适的睡眠环境，可变式多功能床可以切换成平躺式、半躺式、按摩椅等等</li>
-						<li>为女生提供睡醒后整理仪容的设备</li>
-						<li>监测睡眠质量</li>
-						<li>智能唤醒</li>
-					</ul>
+					<section>
+						<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+						<h2>功能设计</h2>
+						<ul>
+							<li class="fragment">提供极其舒适的睡眠环境，可变式多功能床可以切换成平躺式、半躺式、按摩椅等等</li>
+							<li class="fragment">为女生提供睡醒后整理仪容的设备</li>
+							<li class="fragment">监测睡眠质量</li>
+							<li class="fragment">智能唤醒</li>
+						</ul>
+					</section>
+					<section>
+						<h2>你可能会问：如果有人一直占着床位怎么办？</h2>
+						<h3 class="fragment">按照分钟计费，提供短时酣眠</h3>
+					</section>
+					<section>
+						<h2>你可能会问：用户会睡别人睡过的床吗</h2>
+						<h3 class="fragment">我们也在思考</h3>
+						<h3 class="fragment">目前两个方案</h3>
+						<ul>
+							<li class="fragment">自动换床单、枕头、被褥</li>
+							<li class="fragment">定时换+人工换新服务</li>
+						</ul>
+					</section>
 				</section>
 			</div>
 		</div>
@@ -101,6 +127,13 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: false,
+				transition: 'convex',
+				backgroundTransition: 'fade',
+				slideNumber: true,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
@@ -108,6 +141,7 @@
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
 			});
+
 		</script>
 	</body>
 </html>
