--- a/index.html
+++ b/index.html
@@ -24,30 +24,35 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+				<section>
+					<h1>两个选题</h1>
+					<h3>龚楷迪、邱飞样、张家盛、张倬语</h3>
+				</section>
 				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
-					<h1>AR支持的智能研讨间——开会吧</h1>
+					<h1>AR支持的智能研讨间</h1>
+					<h3>开会吧、开会么、智研室、王牌会议室、智能会议小管家</h3>
 				</section>
-				<section>
-					<h1>AR支持的智能研讨间——开会吧</h1>
+				<section data-background="#4d7e65">
+					<h1>AR支持的智能研讨间</h1>
 					<h2>针对群体</h2>
-					<p>学生（主要针对研究生）、老师</p>
+					<h3>学生（主要针对研究生）、老师</h3>
 				</section>
 				<section>
-					<h1>AR支持的智能研讨间——开会吧</h1>
+					<h1>AR支持的智能研讨间</h1>
 					<h2>用户痛点</h2>
 					<ul>
 						<li class="fragment">老师与研究生或者他人经常需要远程开会，而视频会议由于屏幕大小的限制会有一定局限性。</li>
 						<li class="fragment">使用普通屏幕进行开会相对于面对面开会缺乏真实感且降低效率。</li>
 					</ul>
 				</section>
-				<section>
-					<h1>AR支持的智能研讨间——开会吧</h1>
+				<section data-background="#4d7e65">
+					<h1>AR支持的智能研讨间</h1>
 					<h2>场景设计</h2>
-					<p>会议室+AR投影+3D实时摄像</p>
+					<h3>会议室+AR投影+3D实时摄像</h3>
 				</section>
 				<section>
 					<section>
-						<h1>AR支持的智能研讨间——开会吧</h1>
+						<h1>AR支持的智能研讨间</h1>
 						<h2>功能设计</h2>
 						<ul>
 							<li class="fragment">AR和3D实时摄像技术支持：通过AR和3D摄像技术增强视频会议的真实感，并实现远程文档共享批注，提高效率。</li>
@@ -56,25 +61,26 @@
 							<li class="fragment">讨论引导：通过智能关联系统来搜索与主题相关的话题和方向，在讨论遇到瓶颈时给出提示</li>
 						</ul>
 					</section>
-					<section>
-						<h2>你觉得这个需求有多大</h2>
+					<section data-background="#4d7e65">
+						<h1>你可能会问：<br>你觉得这个需求有多大？</h1>
 						<h3 class="fragment">用过我们产品的人一定不会想着再用Skype了</h3>
 					</section>
-					<section>
-						<h2>AR眼镜很笨重</h2>
+					<section data-background="#4d7e65">
+						<h1>你可能会问：<br>AR眼镜很笨重，如何解决？</h1>
 						<h3 class="fragment">不久的将来一定会有人们可长期使用的AR眼镜</h3>
 					</section>
 				</section>
-				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
-					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+				<section data-transition="slide" data-background="#b5533c" data-background-transition="zoom">
+					<h1>供人以最舒服方式打盹的智能空间</h1>
+					<h3>闪睡、睡了么、睡我吧、睡、酣眠小憩、酣睡屋、快睡邦</h3>
 				</section>
-				<section>
-					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+				<section data-background="#b5533c">
+					<h1>供人以最舒服方式打盹的智能空间</h1>
 					<h2>针对群体</h2>
-					<p>学生、老师</p>
+					<h3>学生、老师</h3>
 				</section>
 				<section>
-					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+					<h1>供人以最舒服方式打盹的智能空间</h1>
 					<h2>用户痛点</h2>
 					<ul>
 						<li class="fragment">老师、研究生一天工作8小时非常劳累</li>
@@ -85,15 +91,14 @@
 						<li class="fragment">熬夜的同学也许需要休息一会儿恢复精力（清华某业工程系小学期、某业工程系大作业）</li>
 					</ul>
 				</section>
-				<section>
+				<section data-background="#b5533c">
 					<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
 					<h2>场景设计</h2>
 					<p>可变式多功能床+智能镜子+智能睡眠监测与控制系统+基础设施（被子、枕头、一次性梳子）</p>
-
 				</section>
 				<section>
 					<section>
-						<h1>供人以最舒服方式打盹的智能空间——闪睡</h1>
+						<h1>供人以最舒服方式打盹的智能空间</h1>
 						<h2>功能设计</h2>
 						<ul>
 							<li class="fragment">提供极其舒适的睡眠环境，可变式多功能床可以切换成平躺式、半躺式、按摩椅等等</li>
@@ -102,14 +107,13 @@
 							<li class="fragment">智能唤醒</li>
 						</ul>
 					</section>
-					<section>
-						<h2>你可能会问：如果有人一直占着床位怎么办？</h2>
+					<section data-background="#b5533c">
+						<h1>你可能会问：<br>如果有人一直占着床位怎么办？</h1>
 						<h3 class="fragment">按照分钟计费，提供短时酣眠</h3>
 					</section>
-					<section>
-						<h2>你可能会问：用户会睡别人睡过的床吗</h2>
-						<h3 class="fragment">我们也在思考</h3>
-						<h3 class="fragment">目前两个方案</h3>
+					<section data-background="#b5533c">
+						<h1>你可能会问：<br>用户会睡别人睡过的床吗？</h1>
+						<h3 class="fragment">我们也在思考，目前有两个方案</h3>
 						<ul>
 							<li class="fragment">自动换床单、枕头、被褥</li>
 							<li class="fragment">定时换+人工换新服务</li>
@@ -130,7 +134,7 @@
 				controls: true,
 				progress: true,
 				history: true,
-				center: false,
+				center: true,
 				transition: 'convex',
 				backgroundTransition: 'fade',
 				slideNumber: true,
