--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 				<section>
 					<h1>两个选题</h1>
-					<h3>龚楷迪、邱飞旸、张家盛、张倬语</h3>
+					<p>龚楷迪、邱飞旸、张家盛、张倬语</p>
 				</section>
 				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>AR支持的智能研讨间</h1>
