--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 							<li class="fragment">定时换+人工换新服务</li>
 						</ul>
 					</section>
+					<section>
+					    <img src="image/1.jpg"/>
+					</section>
 				</section>
 			</div>
 		</div>
